# `kglab` changelog

## 0.2.1

2021-03-??

  * tutorial proofreading and corrections; kudos @louisguitton
  * better exception handling for RDF construction, parsing, serialization
  * `build_nx_graph()` now requires a `networkx.DiGraph` directed graph as an argument
  * add DOI to README, CITATION, and docs
  * add contributor instructions
  * replace `GPUtil` with `pynvml` as recommended by NVidia; kudos @kingmesal
  * option to enable NVidia GPU use, if devices are available and libaries are installed
  * using `cuDF`/`cuGraph` in lieu of `pandas`/`networkx` where possible; kudos @BradReesWork


## 0.2.0

2021-02-07

  * project milestone release
  * begin integration of `csvwlib`


## 0.1.8

2021-01-31

  * hotfix: backing out the `igraph` dependency; too many installation issues with it
  * factory pattern to build an `igraph` object allows caller to create and pass in, instead


## 0.1.7

2021-01-30

  * fix for `save_parquet()` since `storage_options` won't be used by `pandas` before 1.2.0
  * introduced `SubgraphMatrix` and `SubgraphTensor` as subclasses for the base vectorization
  * introduced `PSLModel` class for building *probabilistic soft logic* models
  * using `icecream` in methods that require verbose traces


## 0.1.6

2021-01-19

  * rollback `pandas` to 1.1.5 which is the latest stable on Ubuntu; see #94
  * revise `pyvis` use as a factory pattern
  * extend RDFlib serialization with `urlpath` support
  * extend all serialization to support file-like objects
  * including `gcsfs` and `fsspec` to leverage cloud bucket access in `pandas`
  * added `code_of_conduct.md`
  * code checking based on `pylint`
  * added accessor methods, e.g., `KnowledgeGraph.rdf_graph()`
  * updated `pandas` usage for direct Parquet/Arrow calls, e.g., `read_parquet()` and `to_parquet()`
  * updated `pyshacl` usage to >= 0.14.1 to support `inplace` graph manipulation (inference)


## 0.1.5

2021-01-04
