@@ -3,6 +3,7 @@
 ## Contributors
 
 Many thanks to the contributors on this **kglab** project:
+[@gauravjaglan](https://github.com/gauravjaglan),
 [@louisguitton](https://github.com/louisguitton),
 [@jake-aft](https://github.com/jake-aft),
 [@dmoore247](https://github.com/dmoore247);
