@@ -3,7 +3,6 @@ csvwlib >= 0.3.2
 fsspec[gs,s3] >= 0.8.5
 gcsfs >= 0.7.1
 gensim >= 3.8.3
-pynvml >= 8.0.4
 icecream >= 2.0.0
 matplotlib >= 3.3.4
 networkx >= 2.5
@@ -13,11 +12,14 @@ pandas >= 1.1.5
 pslpython >= 2.2.2
 pyarrow >= 2.0.0
 pylev >= 1.3.0
+pynvml >= 8.0.4
 pyshacl >= 0.14.2
 python-dateutil >= 2.8.0
 pyvis >= 0.1.7.0
+pynvml >= 8.0.4
 rdflib >= 5.0.0
 rdflib-jsonld >= 0.5.0
+requests >= 2.25.1
 scikit-learn >= 0.20.2
 statsmodels >= 0.12.0
 urlpath >= 1.1.7
